# param_estimator

./: .gitignore  README.md  clion_build.sh
src/param_estimator/: CMakeLists.txt  package.xml
src/param_estimator/include/param_estimator/: type_def.h
src/param_estimator/lib/EKF_estimator/: EKF_estimator.cpp  EKF_estimator.h
src/param_estimator/lib/estimateInertia/: EKFCorrectorAdditive.cpp  EKFCorrectorAdditive.h  InertiaEstimatorEKF.cpp  InertiaEstimatorEKF.h  buildInfo.mat  codeInfo.mat  codedescriptor.dmr  estimateInertia_data.cpp  estimateInertia_data.h  estimateInertia_rtwutil.cpp  estimateInertia_rtwutil.h  estimateInertia_types.h  gcGuiReport.mat  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_nonfinite.cpp  rt_nonfinite.h  rtw_proj.tmw  rtwtypes.h  trackingEKF.cpp  trackingEKF.h  trisolve.cpp  trisolve.h  xnrm2.cpp  xnrm2.h
src/param_estimator/lib/estimateInertia/examples/: main.cpp  main.h
src/param_estimator/lib/estimateInertia/interface/: _coder_estimateInertia_api.cpp  _coder_estimateInertia_api.h  _coder_estimateInertia_info.cpp  _coder_estimateInertia_info.h  _coder_estimateInertia_mex.cpp  _coder_estimateInertia_mex.h
src/param_estimator/msg/: Params.msg
src/param_estimator/src/: estimator_node.cpp  test.cpp  test_ideal_sim.cpp
